# risc-v-simu

./: CMakeLists.txt  README.md  binary.txt  main.c
